# utility_scripts

./: .gitignore  LICENSE  README.md  allround_downloader.py  heic2png.sh  pyproject.toml
doc/: allround_downloader.md  claude_code_router_setup.md  iphone_file_transfer.md
script/: allround_downloader.py  claude_gemini.sh  claude_router.sh  compare_hdd.py  compare_models.py  convert_heic2pngjpg.sh  cp_3DScanner_data.sh  cp_iphone_app_docs.sh  dowlnload_jpeg_contains_m3u8.py  dowlnload_mp4_from_jpeg_based_m3u8.py  download_mp4_from_jpeg_based_m3u8.py  download_mp4_from_jpegts_based_m3u8.py  fix_nvidia_xid79_screen_lock_freeze.sh  hcomb_2vid.sh  heic2png.sh  install_cuda12.1_ubuntu2204.sh  install_cuda12.3_ubuntu20.sh  install_cuda12.4_ubuntu20.sh  install_cuda12.6_ubuntu2404.sh  install_nvidia_container_toolkit.sh  launch_upload_server.sh  m3u8_to_mp4.py  m3u8_to_mp4_byffmpeg.sh  prepare_azure_vm.sh  set-static-ip.sh  trash.sh  ubuntu_cleanup.sh
