[project]
name = "utility-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=49.0.0",
    "curl-cffi>=0.15.0",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "requests>=2.32.4",
    "yt-dlp>=2026.6.9",
]

[tool.uv]
# Never rely on the system Python. uv downloads and uses its own standalone
# CPython (which bundles Tk, so the GUI works without apt python3-tk).
python-preference = "only-managed"
